--- a/src/asset/reset.css
+++ b/src/asset/reset.css
@@ -1,8 +1,40 @@
+@font-face {
+    font-family: "Spoqa-Hans";
+    font-weight: 300;
+    src: url("../fonts/SpoqaHanSansNeo-Light.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo-Light.woff") format("woff"),
+    url("../fonts/SpoqaHanSansNeo-Light.eot") format("eot")
+}
+
+@font-face {
+    font-family: "Spoqa-Hans";
+    font-weight: 400;
+    src: url("../fonts/SpoqaHanSansNeo-Regular.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo-Regular.woff") format("woff"),
+    url("../fonts/SpoqaHanSansNeo-Regular.eot") format("eot")
+}
+
+@font-face {
+    font-family: "Spoqa-Hans";
+    font-weight: 500;
+    src: url("../fonts/SpoqaHanSansNeo-Medium.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo-Medium.woff") format("woff"),
+    url("../fonts/SpoqaHanSansNeo-Medium.eot") format("eot")
+}
+
+@font-face {
+    font-family: "Spoqa-Hans";
+    font-weight: 600;
+    src: url("../fonts/SpoqaHanSansNeo-Bold.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo-Bold.woff") format("woff"),
+    url("../fonts/SpoqaHanSansNeo-Bold.eot") format("eot")
+}
+
+
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Noto Sans', sans-serif;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: "Spoqa-Hans";
     word-break: keep-all;
 }
 
@@ -21,15 +53,11 @@ a {
     color: #333333;
 }
 
-#wrap,#wrap1 {
+.app {
     margin: 0 auto;
     width: 100%;
     max-width: 1920px;
     overflow: hidden;
-}
-
-#wrap1{
-    max-width: 2560px;
 }
 
 header,
@@ -42,20 +70,5 @@ footer {
 
 .in_wrap {
     margin: 0 auto;
-    width: 1060px;
     overflow: hidden;
-}
-
-b{
-    display: block;
-}
-
-.hide_mobile{
-    display: none;
-}
-
-@media all and (min-width:1921px) and (max-width:2560px) {
-    #wrap,#wrap1{
-        max-width: 100%;
-    }
 }
