--- a/src/asset/auth.scss
+++ b/src/asset/auth.scss
@@ -1,9 +1,10 @@
 @import "mixin.scss";
 
 .Auth_wrap{
-    
+
     .title_area{
         @include textarea();
+        margin-bottom: 20px;
 
         .close{
             width: 20px;
@@ -13,6 +14,111 @@
             left: 0;
             margin-top: -10px;
             filter: invert(1);
+        }
+    }
+
+    .auth-form{
+        @include size();
+
+        .id_title{
+            margin-bottom: 7px;
+
+            span{
+                color: orange;
+            }
+        }
+
+        .warning{
+            font-size: 11px;
+            margin-bottom: 10px;
+            color: #bbb
+        }
+
+        .form-control{
+            @include input-text();
+            @include size();
+            margin-bottom: 10px;
+
+            &::placeholder{
+                color: gray;
+            }
+        }
+
+        .btn{
+            @include size();
+            @include btn();
+            @include flex();
+            background: #2a96ee;
+            color: #fff;
+            border-radius: 7px 
+        }
+
+        .un_btn{
+            @extend .btn;
+            background: gray;
+        }
+    }
+
+    .terms{
+        @include size();
+        display: flex;
+        flex-wrap: wrap;
+        margin: 15px 0 5px;
+
+        input[type="checkbox"]{
+            display: none;
+        }
+
+        .all_check{
+            display: flex;
+            @include size();
+
+            .check{
+                width: 25px;
+                height: 25px;
+                border-radius: 5px;
+                border: 1px solid #eee;
+                box-sizing: border-box;
+                cursor: pointer
+            }
+        }
+
+        .check_text{
+            display: inline-block;
+            margin-left: 7px
+        }
+
+        .check_wrap{
+            border: 1px solid #eee;
+            box-sizing: border-box;
+            padding: 20px 15px;
+            width: 100%;
+            margin: 15px 0
+        }
+
+        .check_wrap li{
+            display: flex;
+            @include size();
+            margin-bottom: 25px;
+
+        &:last-child{
+            margin-bottom: 0;
+        }
+
+            .check{
+                width: 25px;
+                height: 25px;
+                border-radius: 5px;
+                border: 1px solid #eee;
+                box-sizing: border-box;
+                cursor: pointer
+            }
+
+            .check_text{
+                margin-left: 10px;
+                color: #686868;
+                font-size: 15px             
+            }
         }
     }
 }
