--- a/src/asset/common.scss
+++ b/src/asset/common.scss
@@ -10,3 +10,17 @@ header{
 .wrap{
     @include reset();
 }
+
+.title_area{
+        @include textarea();
+
+        .close{
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            margin-top: -10px;
+            filter: invert(1);
+        }
+    }
