--- a/src/asset/common.scss
+++ b/src/asset/common.scss
@@ -4,7 +4,11 @@ header{
     @include flex();
     @include size();
     justify-content: space-between;
-    margin-top: 10px;;
+    margin-top: 10px;
+
+    @media #{$breakpoint-mobile}{
+        display: none;
+    }
 }
 
 .wrap{
@@ -14,6 +18,9 @@ header{
 .title_area{
         @include textarea();
 
+        @media #{$breakpoint-mobile}{
+           margin-top: 20px;
+    }
         .close{
             width: 20px;
             height: 20px;
