--- a/src/asset/home.scss
+++ b/src/asset/home.scss
@@ -6,7 +6,7 @@ $rgba : rgba($color, 0.05);
 .main{
     @include reset();
     background: #f9f9f9c7;
-    padding: 0 15px;
+    padding: 0 25px;
     box-sizing: border-box;
 
         .header{
@@ -44,6 +44,13 @@ $rgba : rgba($color, 0.05);
         .profile{
             width: 30px;
             border-radius: 50%;
+            margin-right: 10px;
+
+        }
+
+        .arrow{
+            width: 10px;
+            height: 5px;
         }
 
         }
