--- a/src/asset/_mixin.scss
+++ b/src/asset/_mixin.scss
@@ -25,6 +25,8 @@
         outline: 0;
         border: 0;
         background: transparent;
+        border-radius: 5px;
+        cursor: pointer;
 }
 
 @mixin btn {
@@ -39,8 +41,8 @@
 @mixin reset {
     @include flex();
     margin: 0 auto;
-    max-width: 400px;
     width: 100%;
+    max-width: 1920px;
     height: 100vh;
     flex-direction: column;
     justify-content: flex-start;
@@ -58,4 +60,12 @@
     box-sizing: border-box;
 }
 
-$breakpoint-mobile :"all and (max-width:500px)";
+@mixin media {
+    width: 375px;
+
+  @media #{$breakpoint-mobile}{
+      width: 90%;
+  }
+}
+
+$breakpoint-mobile :"all and (max-width:550px)";
