--- a/src/asset/Sign.scss
+++ b/src/asset/Sign.scss
@@ -7,8 +7,9 @@ $rgba : rgba($color, 0.8);
     position: relative;
 }
 
-.sign_wrap{
 
+.sign_wrap{
+    @include reset();
     @include media();
 
     .logo{
@@ -104,7 +105,6 @@ $rgba : rgba($color, 0.8);
         @include media();
         background: #fff;
         padding: 15px;
-        padding-top: 0;
         box-sizing: border-box;
     }
 
