--- a/src/asset/home.scss
+++ b/src/asset/home.scss
@@ -72,7 +72,7 @@ $rgba : rgba($color, 0.05);
 
         .post{
             display: flex;
-            width: 20%;
+            width: 350px;
             height: auto;
             flex-direction: column;
             background: #fff;
