--- a/src/asset/upload.scss
+++ b/src/asset/upload.scss
@@ -54,6 +54,7 @@
                 width: 100%;
                 cursor: inherit;
                 resize: none;
+                overflow: hidden;
             }
 
             .att{
