--- a/src/asset/auth.scss
+++ b/src/asset/auth.scss
@@ -32,19 +32,23 @@
 
         .warning{
             font-size: 11px;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
             color: #bbb
         }
 
         .form-control{
             @include input-text();
             @include size();
-            margin-bottom: 10px;
+            margin-bottom: 15px;
 
             &::placeholder{
                 color: gray;
             }
         }
+        
+            #id{
+                margin-bottom: 10px;
+            }
 
         .btn{
             @include size();
@@ -65,7 +69,7 @@
         @include size();
         display: flex;
         flex-wrap: wrap;
-        margin: 15px 0 5px;
+        margin:10px 0 5px 0;
 
         input[type="checkbox"]{
             display: none;
