--- a/src/asset/header.scss
+++ b/src/asset/header.scss
@@ -7,10 +7,6 @@ header {
   justify-content: space-between;
   margin-top: 20px;
 
-  a {
-    display: none;
-  }
-
   .title {
     font-size: 24px;
     font-weight: 500;
@@ -19,6 +15,7 @@ header {
 
   .menu {
     @include flex();
+    cursor: pointer;
 
     input[type="text"] {
       display: none;
@@ -35,7 +32,33 @@ header {
       @include btn-Reset();
       width: 10px;
       height: 5px;
-      display: none;
     }
+  }
+}
+
+.sub_menu {
+  @include flex();
+  width: 100px;
+  height: auto;
+  flex-direction: column;
+  position: absolute;
+  right: 0;
+  top: 70px;
+  background: #fff;
+  box-shadow: 0 4px 16px 0 $hoverRgb;
+}
+
+.sub_menu li {
+  @include flex();
+  width: 100%;
+  height: 30px;
+  text-align: center;
+  border-bottom: 1px solid #eee;
+  box-sizing: border-box;
+  cursor: pointer;
+
+  a {
+    display: block;
+    width: 100%;
   }
 }
