--- a/src/asset/profile.scss
+++ b/src/asset/profile.scss
@@ -113,13 +113,9 @@
         .btn {
           @include btn-Reset();
           font-size: 15px;
-          margin-top: 20px;
-          color: #495057;
-
-          &:hover {
-            color: #12b886;
-            text-decoration: underline;
-          }
+          margin-top: 13px;
+          color: #12b886;
+          text-decoration: underline;
         }
         .nick_btn {
           margin-right: 15px;
@@ -164,6 +160,7 @@
           margin-left: auto;
           @include btn-Reset();
           text-decoration: underline;
+          font-size: 16px;
         }
       }
 
@@ -210,7 +207,7 @@
 
     .end_btn {
       @include btn-Reset();
-      margin: 10px 0 0 auto;
+      margin: 20px 0 0 auto;
       font-size: 16px;
       background: #12b886;
       color: #fff;
