--- a/src/asset/header.scss
+++ b/src/asset/header.scss
@@ -26,6 +26,11 @@ header {
       width: 40px;
       border-radius: 50%;
       margin-right: 10px;
+      height: 40px;
+
+      img {
+        width: 100%;
+      }
     }
 
     .arrow {
